fix progress bar z-index

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ body {
   inset-inline: 0;
   display: flex;
   padding: 10px;
+  z-index: 3;
 }
 .player-progress input {
   flex: 1;
